# mlip_optimizer

./: .gitignore  LICENSE  README.md  mlip_optimizer.code-workspace  mlip_optimizer_conda_env.yaml  pyproject.toml  requirements.txt
examples/: README.md
examples/01_download_datasets/: download_datasets.py
examples/01_download_datasets/inputs/: nsp_datasets.json  sage_rc2_datasets.json
examples/01_download_datasets/outputs/optimization/OpenFF_NSP_Optimization_Set_1_Nitrogen_v4_0_20260306T142716/: OpenFF_NSP_Optimization_Set_1_Nitrogen_v4_0.parquet
examples/01_download_datasets/outputs/optimization/OpenFF_NSP_Optimization_Set_1_Phosphorus_v4_0_20260306T142948/: OpenFF_NSP_Optimization_Set_1_Phosphorus_v4_0.parquet
examples/01_download_datasets/outputs/optimization/OpenFF_NSP_Optimization_Set_1_Sulfur_v4_0_20260306T142817/: OpenFF_NSP_Optimization_Set_1_Sulfur_v4_0.parquet
examples/02_download_notebook/: download_notebook.py
examples/03_check_dataset_status/: check_dataset_status.py
examples/04_single_molecule/: single_molecule.py
examples/04_single_molecule/inputs/: potentials.json
examples/05_batch_smarts/: batch_smarts.py
examples/06_run_benchmark/: run_benchmark.py
examples/06_run_benchmark/inputs/: benchmark_config.json  benchmark_config_sdf.json
examples/06_run_benchmark/outputs/: qm_comparison_detail.csv  qm_comparison_summary.csv
examples/06_run_benchmark/outputs/sdf/: optimized_aceff-2_0.sdf  optimized_openff-2_3_0.sdf
examples/07_single_model_benchmark/: _shared.py  compare_models.py  gpu_slurmscript.sh  optimize_single_model.py  slurmscript.sh  submit.sh
examples/07_single_model_benchmark/inputs/: compare_config.json  optimize_aceff.json  optimize_aimnet2.json  optimize_fennix_bio1_ion.json  optimize_mace.json  optimize_mace_off24_medium.json  optimize_mace_omol.json  optimize_sage.json
examples/08_torsion_scan/: torsion_scan.py
examples/08_torsion_scan/inputs/: torsion_scan_config.json
examples/08_torsion_scan/outputs/: torsion_scan.csv
examples/09_torsion_scan_2d/: torsion_scan_2d.py
examples/09_torsion_scan_2d/inputs/: torsion_scan_2d_config.json
models/: README.md
single_molecule_output/sdf/: optimized_aceff-2_0.sdf  optimized_sage.sdf
src/mlip_optimizer/: __init__.py  _types.py  comparison.py  geometry.py  io.py  torsion.py
src/mlip_optimizer/data/: __init__.py  download-qcdata-tables.py  download.py  grouping.py  readers.py
src/mlip_optimizer/optimizers/: __init__.py  _base.py  ase_base.py  egret.py  openff.py  openmm_ml.py  orb.py
src/mlip_optimizer/visualization/: __init__.py  drawing.py  reporting.py
