[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlip-optimizer"
version = "0.1.0"
description = "Molecular geometry optimization using ML interatomic potentials via OpenMM-ML"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openff-toolkit>=0.18.0",
    "openmm",
    "openmmml",
    "rdkit",
    "numpy",
]

[project.optional-dependencies]
ase = [
    "ase",
    "torch",
]
orb = [
    "mlip-optimizer[ase]",
    "orb-models",
]
egret = [
    "mlip-optimizer[ase]",
    "mace-torch",
]
viz = [
    "matplotlib",
    "cairosvg",
    "Pillow",
    "tabulate",
    "tqdm",
]
qcarchive = [
    "qcportal",
    "openff-qcsubmit",
    "pyarrow",
    "pandas",
    "tqdm",
]
torsion = [
    "yammbs",
]
all = [
    "mlip-optimizer[orb,egret,viz,qcarchive,torsion]",
]
dev = [
    "mlip-optimizer[all]",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Pixi configuration
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["pytorch", "nvidia", "conda-forge", "conda-forge/label/openmm_rc"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# Python
python = ">=3.11,<3.14"

# Core scientific libraries
numpy = "*"
pyarrow = "*"
rdkit = "*"
ase = "*"

# OpenMM and force fields
openmm = "==8.5.0beta"
openmmforcefields = "*"
openff-toolkit = "==0.18.0"
openff-forcefields = "*"
openff-qcsubmit = "*"
cmiles = "*"
qcfractal = "*"

# Utilities
tqdm = "*"
click = "*"
tabulate = "*"
cairosvg = "*"

# Notebook and visualization
jupyter = "*"
marimo = "*"
pytorch = ">=2.8.0,<3"

[tool.pixi.pypi-dependencies]
# PyTorch ecosystem — torch itself is installed per-feature (CPU vs CUDA)
torchmd-net = "*"
mace-torch = "*"
openmmml = { git = "https://github.com/openmm/openmm-ml.git", branch = "main" }
yammbs = { git = "https://github.com/openforcefield/yammbs.git", branch = "main" }
aimnet = "*"
huggingface-hub = "*"
fennol = "*"

# This project (editable install)
mlip-optimizer = { path = ".", editable = true }

# --- CPU feature (default) ---
[tool.pixi.feature.cpu.pypi-dependencies]
torch = "*"

# --- CUDA feature for GPU nodes ---
[tool.pixi.feature.cuda.system-requirements]
cuda = "13"

[tool.pixi.feature.cuda.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu130"]

[tool.pixi.feature.cuda.pypi-dependencies]
torch = "*"
cuequivariance-torch = "*"
cuequivariance-jax = "*"
jax = { version = "*", extras = ["cuda13"] }
jaxlib = { version = "*", extras = ["cuda13"] }

# --- Environments ---
[tool.pixi.environments]
default = { features = ["cpu"], solve-group = "cpu" }
cuda = { features = ["cuda"], solve-group = "cuda" }
