[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlip-optimizer"
version = "0.1.0"
description = "Molecular geometry optimization using ML interatomic potentials via OpenMM-ML"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openff-toolkit>=0.18.0",
    "openmm",
    "openmmml",
    "rdkit",
    "numpy",
]

[project.optional-dependencies]
ase = [
    "ase",
    "torch",
]
orb = [
    "mlip-optimizer[ase]",
    "orb-models",
]
egret = [
    "mlip-optimizer[ase]",
    "mace-torch",
]
viz = [
    "matplotlib",
    "cairosvg",
    "Pillow",
    "tabulate",
    "tqdm",
]
qcarchive = [
    "qcportal",
    "openff-qcsubmit",
    "pyarrow",
    "pandas",
    "tqdm",
]
torsion = [
    "yammbs",
]
all = [
    "mlip-optimizer[orb,egret,viz,qcarchive,torsion]",
]
dev = [
    "mlip-optimizer[all]",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Pixi configuration
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["conda-forge", "conda-forge/label/openmm_rc", "conda-forge/label/openmm_dev"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# Only packages that need conda (no reliable PyPI wheel)
python = ">=3.11,<3.14"
rdkit = "*"

[tool.pixi.pypi-dependencies]
# OpenFF stack (low-level deps first)
openff-utilities = { git = "https://github.com/openforcefield/openff-utilities.git", tag = "v0.1.16" }
openff-units = { git = "https://github.com/openforcefield/openff-units.git", tag = "0.3.2" }
openff-toolkit = { git = "https://github.com/openforcefield/openff-toolkit.git", tag = "0.18.0" }
openff-forcefields = { git = "https://github.com/openforcefield/openff-forcefields.git", tag = "2026.01.0" }
openff-interchange = { git = "https://github.com/openforcefield/openff-interchange.git", tag = "v0.5.2" }
openff-nagl-models = { git = "https://github.com/openforcefield/openff-nagl-models.git", tag = "v2025.09.0" }
openff-nagl = { git = "https://github.com/openforcefield/openff-nagl.git", tag = "v0.5.4" }
openff-qcsubmit = { git = "https://github.com/openforcefield/openff-qcsubmit.git", tag = "0.57.0" }
openmmforcefields = { git = "https://github.com/openmm/openmmforcefields.git", tag = "0.15.1" }

# Machine learning potentials
torchmd-net = "*"
mace-torch = "*"
openmmml = { git = "https://github.com/openmm/openmm-ml.git", branch = "main" }
yammbs = { git = "https://github.com/openforcefield/yammbs.git", branch = "main" }
aimnet = "*"
nvalchemi-toolkit-ops = "==0.2.0"
huggingface-hub = "*"
fennol = "*"

# Misc dependencies
python-constraint = "*"
pyarrow = "*"
xmltodict = "*"
cachetools = "*"
cmiles = "*"
qcfractal = "*"
numpy = "*"
ase = "*"

# Utilities
tqdm = "*"
click = "*"
tabulate = "*"
cairosvg = "*"

# Notebook and visualization
jupyter = "*"
marimo = "*"

# Pre-release
openmm = { version = "*", pip = true }

# This project (editable install)
mlip-optimizer = { path = ".", editable = true }

# --- CPU feature (default) ---
[tool.pixi.feature.cpu.pypi-dependencies]
torch = "*"

# --- CUDA feature for GPU nodes ---
[tool.pixi.feature.cuda.system-requirements]
cuda = "12.9"

[tool.pixi.feature.cuda.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu129"]

[tool.pixi.feature.cuda.pypi-dependencies]
torch = "*"
nvidia-cuda-nvrtc = "*"
openmm-cuda-12 = "*"
cuequivariance-torch = "*"
cuequivariance-jax = "*"
jax = { version = "*", extras = ["cuda12"] }
jaxlib = { version = "*", extras = ["cuda12"] }

# --- Environments ---
[tool.pixi.environments]
default = { features = ["cpu"], solve-group = "cpu" }
cuda = { features = ["cuda"], solve-group = "cuda" }
